# cmocean

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: release.yaml  test.yaml
