[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm",
]

[project]
name = "cmocean"
description = "Colormaps for Oceanography"
readme = "README.md"
license = {file = "LICENSE.txt"}
maintainers = [
    {name = "Kristen Thyng", email = "kthyng@gmail.com"},
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "dependencies",
  "version",
]
[project.optional-dependencies]
tests = [
  "pytest",
]
plots = [
  "colorspacious",
  "viscm",
]

[project.urls]
documentation = "https://matplotlib.org/cmocean/"
homepage = "https://github.com/matplotlib/cmocean"
repository = "https://github.com/matplotlib/cmocean"

[tool.setuptools]
packages = ["cmocean"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "cmocean/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.pytest.ini_options]
filterwarnings = [
    "error:::cmocean.*",
    "ignore::UserWarning",
    "ignore::RuntimeWarning",
]
